Exercise 2 preliminary operation

--- a/index.html
+++ b/index.html
@@ -4,14 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="js/esercizio1.js"></script>
-    <!-- <script defer src="js/esercizio2.js"></script> -->
+    <!-- <script defer src="js/esercizio1.js"></script> -->
+    <script defer src="js/esercizio2.js"></script>
     <title>Pali e dispari</title>
 </head>
 <body>
-    <div>
+    <!-- Esercizio 1 -->
+    <!-- <div>
         <input type="text" id="word">
         <button id="button">Invia</button>
+        <p id="message"></p>
+    </div> -->
+
+    <!-- Esercizio 2 -->
+    <div>
+        <select id="select">
+            <option value="pari">Pari</option>
+            <option value="dispari">Dispari</option>
+        </select>
+        <input type="number" id="number">
+        <button id="button">invia</button>
+        <hr>
         <p id="message"></p>
     </div>
 </body>
