--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
             <option value="pari">Pari</option>
             <option value="dispari">Dispari</option>
         </select>
-        <input type="number" id="number">
+        <label for="number"> Scegli un numero tra 1 e 5</label>
+        <input type="number" min="1" max="5" id="number">
         <button id="button">invia</button>
         <hr>
-        <p id="message"></p>
+        <p id="user-number"></p>
+        <p id="choise"></p>
+        <p id="cpu-number"></p>
+        <p id="result"></p>
+        <p id="winner"></p>
     </div>
 </body>
 </html>
