--- a/Esercizio 2/index.html
+++ b/Esercizio 2/index.html
@@ -4,20 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script defer src="js/esercizio1.js"></script> -->
     <script defer src="js/esercizio2.js"></script>
-    <title>Pali e dispari</title>
+    <title>Document</title>
 </head>
 <body>
-    <!-- Esercizio 1 -->
-    <!-- <div>
-        <input type="text" id="word">
-        <button id="button">Invia</button>
-        <p id="message"></p>
-    </div> -->
-
-    <!-- Esercizio 2 -->
-    <div>
+     <!-- Esercizio 2 -->
+     <div>
         <select id="select">
             <option value="pari">Pari</option>
             <option value="dispari">Dispari</option>
